--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,9 @@ FRONTEND_URL=http://localhost:5173
 
 # Default From Email
 DEFAULT_FROM_EMAIL=noreply@fastest.exchange
+
+# Quidax API Configuration
+QUIDAX_API_KEY=your-quidax-api-key
+QUIDAX_SECRET_KEY=your-quidax-secret-key
+QUIDAX_BASE_URL=https://www.quidax.com/api/v1
+QUIDAX_SANDBOX_MODE=True
